updated fonts across app and fixed some spacing issues this caused

--- a/src/Components/Episode/Episode.css
+++ b/src/Components/Episode/Episode.css
@@ -5,6 +5,7 @@
     display: flex;
     flex-direction: column;
     height: 375px;
+    margin: 12px;
     padding: 20px;
     position: relative;
     width: 315px;
