--- a/src/Components/Featured/Featured.css
+++ b/src/Components/Featured/Featured.css
@@ -15,7 +15,7 @@
     font-weight: bolder;
     font-size: 11px;
     text-transform: uppercase;
-    padding: 2px 15px 0 15px;
+    padding: 2px 15px 2px 15px;
     border-radius: 15px;
     margin: 20px 30px;
     display: inline-block;
