--- a/src/Components/NavBar/Navbar.css
+++ b/src/Components/NavBar/Navbar.css
@@ -27,6 +27,7 @@
     color: #fab040;
     display: flex;
     flex-direction: row;
+    font-family: "Anek Latin", sans-serif;
     font-size: large;
     font-weight: bold;
     list-style: none;
